--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "good-squeeze": "^4.0.0",
     "hapi": "^15.0.3",
     "inert": "^4.0.2",
+    "moment": "^2.15.0",
     "mssql": "^3.3.0",
     "socket.io": "^1.4.8",
     "twilio": "^2.10.0"
