--- a/package.json
+++ b/package.json
@@ -17,12 +17,13 @@
   },
   "homepage": "https://github.com/kehnj/sqlStatus#readme",
   "dependencies": {
-    "express": "^4.14.0",
+    "dotenv": "^2.0.0",
     "good": "^7.0.2",
     "good-console": "^6.1.2",
     "good-squeeze": "^4.0.0",
     "hapi": "^15.0.3",
     "inert": "^4.0.2",
+    "moment": "^2.15.0",
     "mssql": "^3.3.0",
     "socket.io": "^1.4.8",
     "twilio": "^2.10.0"
